--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -38,11 +38,14 @@
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.23.22",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.545.0",
     "maplibre-gl": "^5.7.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.3",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
