--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^20.10.6",
     "@types/jest": "^29.5.11",
     "@types/pg": "^8.11.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "typescript": "^5.3.3",
     "tsx": "^4.7.0",
     "jest": "^29.7.0",
