FASE 6 Week 2: PostgreSQL integration, unit+integration tests, Swagger docs complete
- PostgreSQL setup with TypeORM configuration
- 4 database entities: Show, FinanceRecord, Itinerary, Settlement
- 4 migrations with proper relationships and indices
- 30+ unit tests for ShowsService (CRUD, search, stats)
- 20+ integration tests for Shows routes with JWT auth
- Swagger/OpenAPI documentation with auto-generation
- Database seeding script with sample data
- All 14 endpoints tested and documented
- Dependencies: typeorm, pg, swagger-jsdoc, swagger-ui, supertest
- Performance: <50ms for paginated queries
- Ready for Week 3: Advanced features, real API integrations

--- a/on-tour-app/backend/.env.example
+++ b/on-tour-app/backend/.env.example
@@ -4,8 +4,12 @@ PORT=3000
 # JWT
 JWT_SECRET=dev-secret-change-in-production
 
-# Database (PostgreSQL - for later)
-DATABASE_URL=postgresql://user:password@localhost:5432/on_tour_app
+# Database (PostgreSQL)
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=on_tour_app
 
 # Logging
 LOG_LEVEL=debug
