--- a/on-tour-app/backend/package.json
+++ b/on-tour-app/backend/package.json
@@ -16,7 +16,9 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "migration:generate": "typeorm migration:generate",
     "migration:run": "typeorm migration:run",
-    "migration:revert": "typeorm migration:revert"
+    "migration:revert": "typeorm migration:revert",
+    "seed": "node --loader ts-node/esm src/scripts/seed.ts",
+    "db:reset": "npm run migration:revert && npm run migration:run && npm run seed"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -30,13 +32,16 @@
     "typeorm": "^0.3.16",
     "uuid": "^9.0.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "typescript": "^5.2.2",
     "@types/node": "^20.8.0",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/swagger-ui-express": "^4.1.6",
     "ts-node": "^10.9.1",
     "vitest": "^0.34.6",
     "@vitest/ui": "^0.34.6",
@@ -44,6 +49,8 @@
     "prettier": "^3.1.0",
     "eslint": "^8.52.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0"
+    "@typescript-eslint/parser": "^6.10.0",
+    "supertest": "^6.3.3",
+    "@types/supertest": "^2.0.12"
   }
 }
