--- a/on-tour-app/backend/package.json
+++ b/on-tour-app/backend/package.json
@@ -21,36 +21,39 @@
     "db:reset": "npm run migration:revert && npm run migration:run && npm run seed"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.10.0",
     "pino": "^8.16.1",
     "pino-http": "^8.5.0",
-    "jsonwebtoken": "^9.1.0",
-    "zod": "^3.22.4",
-    "dotenv": "^16.3.1",
-    "pg": "^8.10.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.16",
     "uuid": "^9.0.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/node": "^20.8.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.20",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/swagger-ui-express": "^4.1.6",
-    "ts-node": "^10.9.1",
-    "vitest": "^0.34.6",
-    "@vitest/ui": "^0.34.6",
     "@types/jest": "^29.5.5",
-    "prettier": "^3.1.0",
-    "eslint": "^8.52.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.8.0",
+    "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
+    "@vitest/ui": "^0.34.6",
+    "eslint": "^8.52.0",
+    "prettier": "^3.1.0",
     "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.12"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   }
 }
