--- a/on-tour-app/backend/package.json
+++ b/on-tour-app/backend/package.json
@@ -21,15 +21,19 @@
     "db:reset": "npm run migration:revert && npm run migration:run && npm run seed"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.3",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.10",
     "pg": "^8.10.0",
     "pino": "^8.16.1",
     "pino-http": "^8.5.0",
+    "stripe": "^19.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.16",
