--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -63,6 +63,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@playwright/test": "^1.56.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query-devtools": "^5.90.2",
