--- a/on-tour-app/backend/package.json
+++ b/on-tour-app/backend/package.json
@@ -33,6 +33,8 @@
     "pg": "^8.10.0",
     "pino": "^8.16.1",
     "pino-http": "^8.5.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stripe": "^19.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
