--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -37,6 +37,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/dompurify": "^3.0.5",
     "@use-gesture/react": "^10.3.1",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.2.7",
@@ -49,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "supercluster": "^8.0.1",
     "web-vitals": "^5.1.0",
