--- a/on-tour-app/netlify.toml
+++ b/on-tour-app/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npm ci --legacy-peer-deps && npm run build"
   publish = "dist"
-
+  
 [build.environment]
-  NODE_VERSION = "20"
-  NPM_FLAGS = "--legacy-peer-deps"
+  NODE_VERSION = "20.0.0"
+  NPM_VERSION = "10.0.0"
 
 [[redirects]]
   from = "/*"
