--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -44,11 +44,14 @@
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.23.22",
+    "i18next": "^25.6.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.545.0",
     "maplibre-gl": "^5.7.1",
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.2.4",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
@@ -88,6 +91,7 @@
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react": "^5.0.2",
+    "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
@@ -103,6 +107,7 @@
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "lint-staged": "^16.2.3",
+    "playwright": "^1.56.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "rollup-plugin-visualizer": "^6.0.5",
@@ -113,8 +118,6 @@
     "vite": "^7.1.7",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pwa": "^1.0.3",
-    "vitest": "^3.2.4",
-    "playwright": "^1.56.1",
-    "@vitest/browser": "3.2.4"
+    "vitest": "^3.2.4"
   }
 }
