--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,18 @@
 {
-  "buildCommand": "cd on-tour-app && npm run build",
-  "outputDirectory": "on-tour-app/dist",
-  "installCommand": "cd on-tour-app && npm install --legacy-peer-deps",
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": null,
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "build": {
+    "env": {
+      "NODE_VERSION": "20"
+    }
+  }
 }
