--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install --legacy-peer-deps",
+  "outputDirectory": "on-tour-app/dist",
+  "installCommand": "npm run postinstall",
   "framework": null,
   "rewrites": [
     {
