fix: use direct cd commands in vercel.json instead of root package.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+  "buildCommand": "cd on-tour-app && npm run build",
   "outputDirectory": "on-tour-app/dist",
-  "installCommand": "npm run postinstall",
+  "installCommand": "cd on-tour-app && npm install --legacy-peer-deps",
   "framework": null,
   "rewrites": [
     {
