docs: add VERCEL_SETUP.md with Root Directory configuration instructions

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "bash build.sh",
-  "outputDirectory": "on-tour-app/dist",
-  "installCommand": "bash install.sh",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": null,
   "rewrites": [
     {
