perf: optimizar build de Vercel para reducir tiempo de deployment
- Cambiar minificación de terser a esbuild (4-5x más rápido)
- Desactivar bundle analyzer y compresión en Vercel (lo hace automáticamente)
- Usar npm ci con --prefer-offline para aprovechar cache
- Configurar esbuild para eliminar console.log y debugger
- Reducir tiempo de build de ~10min a ~3-4min estimado

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install --legacy-peer-deps",
+  "installCommand": "npm ci --legacy-peer-deps --prefer-offline",
   "framework": null,
   "rewrites": [
     {
@@ -12,7 +12,10 @@
   ],
   "build": {
     "env": {
-      "NODE_VERSION": "20"
+      "NODE_VERSION": "20",
+      "NPM_CONFIG_LOGLEVEL": "error",
+      "VITE_BUILD_CACHE": "true"
     }
-  }
+  },
+  "crons": []
 }
