perf: optimizaciones extremas de build para Vercel
🚀 Reducción estimada de tiempo: 10min → 2-3min

Cambios principales:
- ❌ Skip TypeScript check en producción (ahorra ~30s)
- 📦 Reducir chunks de 20+ a solo 4 (vendor-react, vendor-ui, vendor-heavy, vendor)
- 🔧 Simplificar PWA globPatterns (solo js/css/html)
- 📊 Desactivar reportCompressedSize para build más rápido
- ⚡ Reducir optimizeDeps a lo mínimo esencial
- 🗜️ Chunks más grandes (800KB limit) = menos splits = build más rápido

TypeScript check movido a 'npm run build:check' para uso local

--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit || true && vite build",
+    "build": "vite build",
+    "build:check": "tsc --noEmit || true && vite build",
     "build:strict": "tsc && vite build",
     "build:analyze": "npm run build && node scripts/analyze-bundle.js",
     "preview": "vite preview",
