--- a/.vercelignore
+++ b/.vercelignore
@@ -1,30 +1,35 @@
 # Tests
-*.test.*
-*.spec.*
-__tests__
-**/__tests__/**
+
+_.test._
+_.spec._
+**tests**
+**/**tests**/**
 e2e/
 coverage/
 
 # Storybook
-.storybook/
-**/*.stories.*
+
+.storybook/ \*_/_.stories.\*
 
 # Documentation
+
 docs/
-*.md
+\*.md
 !README.md
 
 # Development
+
 .vscode/
 .idea/
 .git/
 .github/
 
 # Build artifacts no necesarios
+
 dist/stats.html
 node_modules/.cache/
 
 # Otros
-*.log
+
+\*.log
 .DS_Store
