--- a/on-tour-app/.env.example
+++ b/on-tour-app/.env.example
@@ -32,3 +32,15 @@ VITE_AMADEUS_API_SECRET=your_api_secret_here
 
 # The app will automatically use Amadeus for REAL prices when these are configured
 # Without these keys, the app will fallback to estimated prices with warnings
+
+# ============================================================================
+
+# Firebase Configuration (for Authentication & Database)
+# Get your config at: Firebase Console > Project Settings > Your apps > Web app
+VITE_FIREBASE_API_KEY=your_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your_project_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
+VITE_FIREBASE_APP_ID=1:123456789:web:abc123def456
+VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
