--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -44,6 +44,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
