--- a/on-tour-app/package.json
+++ b/on-tour-app/package.json
@@ -54,6 +54,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.2.4",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
