feat: improve Firebase config handling and add deployment docs
- Add robust Firebase initialization with fallback for missing env vars
- Prevent Firebase errors when environment variables are not configured
- Add comprehensive Vercel deployment guide with step-by-step setup
- Update .env.example to include Firebase variables
- Add helpful console warnings when Firebase is not configured
- Graceful degradation when authentication is unavailable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
+# Firebase Authentication (REQUIRED for user auth)
+# Get these values from Firebase Console -> Project Settings -> General -> Your apps
+# See FIREBASE_SETUP.md for detailed instructions
+
+VITE_FIREBASE_API_KEY=your_firebase_api_key_here
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=123456789012
+VITE_FIREBASE_APP_ID=1:123456789012:web:abc123def456
+VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# ============================================================================
+
 # RapidAPI Skyscanner Flight Search (RECOMMENDED - Real Prices)
 # Get your free API key at: https://rapidapi.com/skyscanner/api/skyscanner-flight-search
 # Free tier: 500 API calls per month
