--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,12 @@
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/assets/(.*)", "destination": "/assets/$1" },
+    { "source": "/((?!api).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
-      "source": "/assets/(.*\\.js)",
+      "source": "/(.*\\.js)$",
       "headers": [
         {
           "key": "Content-Type",
@@ -21,7 +22,20 @@
       ]
     },
     {
-      "source": "/assets/(.*\\.css)",
+      "source": "/(.*\\.mjs)$",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.css)$",
       "headers": [
         {
           "key": "Content-Type",
