fix: Grant full access to all sections for both artist and agency roles
- Remove artist/agency navigation restrictions in DashboardLayout
- All users now have access to: shows, travel, calendar, finance, contacts, members, teams, clients, branding, billing, integrations, documents, reports, links
- Remove branding page restriction (was artist-only, now available for all)
- Fix Vercel routing to prevent JS files from being served as HTML
- Add user_artist to demo users seed data

This resolves permission issues where artists couldn't access essential features like finance, travel, and organization settings.

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
   "rewrites": [
-    { "source": "/assets/(.*)", "destination": "/assets/$1" },
-    { "source": "/((?!api).*)", "destination": "/index.html" }
+    { "source": "/((?!api|assets|.*\\.(js|mjs|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
