--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,13 @@
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
   "rewrites": [
-    { "source": "/((?!api|assets|.*\\.(js|mjs|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)).*)", "destination": "/index.html" }
+    { "source": "/api/:path*", "destination": "/api/:path*" },
+    { "source": "/assets/:path*", "destination": "/assets/:path*" },
+    { "source": "/:path((?!.*\\.).*)", "destination": "/index.html" }
   ],
   "headers": [
     {
-      "source": "/(.*\\.js)$",
+      "source": "/assets/(.*\\.js)",
       "headers": [
         {
           "key": "Content-Type",
@@ -21,7 +23,7 @@
       ]
     },
     {
-      "source": "/(.*\\.mjs)$",
+      "source": "/assets/(.*\\.mjs)",
       "headers": [
         {
           "key": "Content-Type",
@@ -34,21 +36,12 @@
       ]
     },
     {
-      "source": "/(.*\\.css)$",
+      "source": "/assets/(.*\\.css)",
       "headers": [
         {
           "key": "Content-Type",
           "value": "text/css; charset=utf-8"
         },
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/assets/(.*)",
-      "headers": [
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
