fix: remove ALL permission restrictions and fix 404 errors
BREAKING CHANGES:
- Remove all read-only restrictions for ALL organization types
- Artist, Agency, Management organizations now have FULL ACCESS to everything
- can() function now returns true for all permissions
- canExportFinance() now returns true for all users
- Remove read-only badges from UI (DashboardLayout, Shows, Travel)

Vercel Config:
- Simplify routing with cleanUrls and trailingSlash
- Remove complex rewrites that were causing 404 errors
- Let Vercel's default SPA routing handle navigation

Permissions:
✅ finance:export - ENABLED for all
✅ shows:write - ENABLED for all
✅ travel:book - ENABLED for all

UI Changes:
- Removed read-only badge from header
- Removed read-only badge from Shows page
- Removed read-only badge from Travel page
- All users can now edit, create, delete everything

--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,8 @@
   "outputDirectory": "dist",
   "installCommand": "npm install --legacy-peer-deps",
   "framework": "vite",
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/:path*" },
-    { "source": "/assets/:path*", "destination": "/assets/:path*" },
-    { "source": "/:path((?!.*\\.).*)", "destination": "/index.html" }
-  ],
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
       "source": "/assets/(.*\\.js)",
