fix: add SPA routing rewrite to vercel.json
CRITICAL FIX:
- Add rewrites to serve index.html for all routes (SPA routing)
- Fixes 404 errors when navigating directly to routes
- Preserves asset serving with proper MIME types

Changes:
- vercel.json: Add rewrites section with catch-all to /index.html
- All non-static routes now properly serve React app

This should resolve:
❌ 'A bad HTTP response code (404) was received when fetching the script'
✅ Proper SPA routing on Vercel
✅ Deep links work correctly
✅ Assets still cached with correct MIME types

--- a/vercel.json
+++ b/vercel.json
@@ -66,5 +66,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
