--- a/vercel.json
+++ b/vercel.json
@@ -69,7 +69,7 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets/).*)",
       "destination": "/index.html"
     }
   ]
