perf: add advanced performance hooks and utilities
New performance hooks:
✅ useDebounce - Debounce values for search/filters (300ms default)
✅ useDebouncedCallback - Debounce function calls with cleanup
✅ useThrottle - Throttle high-frequency events (100ms default)
✅ useThrottledScroll - RAF-optimized scroll handling
✅ useIntersectionObserver - Lazy loading and visibility detection
✅ useIsVisible - Simple visibility hook with freeze option
✅ useLocalStorage - Optimized storage with debouncing and cross-tab sync

Performance utilities:
✅ analyze-performance.js - Bundle size analysis script
✅ npm run build:perf - Analyze bundle after build

Benefits:
- Reduce unnecessary renders with debouncing
- Optimize scroll/resize handlers with throttling
- Lazy load components with intersection observer
- Prevent localStorage write storms
- Better cross-tab synchronization
- Bundle analysis for optimization tracking

All hooks include:
- Proper cleanup on unmount
- TypeScript types
- Error handling
- Memory leak prevention
- Modern React patterns (refs, callbacks)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:check": "tsc --noEmit || true && vite build",
     "build:strict": "tsc && vite build",
     "build:analyze": "npm run build && node scripts/analyze-bundle.js",
+    "build:perf": "npm run build && node scripts/analyze-performance.js",
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
