fix: resolve critical TypeScript errors and improve code quality
- Fix __modifiedAt type mismatch (string → number) in ShowEditorDrawer
- Fix detectDateConflict undefined parameter with proper fallback
- Fix syntax error in auto-complete-i18n.cjs (extractKeys typo)
- Remove deprecated tsconfig baseUrl (paths no longer needed)
- Add required 'args' to all PeriodFilter Storybook stories
- Clean duplicate Tailwind dark mode classes in Login page
- Remove debug console.log statements from production code
- Build verification: all TypeScript errors resolved ✓

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals", "node", "@testing-library/jest-dom"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "types": ["vitest/globals", "node", "@testing-library/jest-dom"]
   },
   "include": ["src", "vitest.setup.ts"],
   "exclude": ["node_modules", "dist"],
