--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ logs
 coverage/
 *.lcov
 
+# Firebase Admin Keys (NEVER COMMIT)
+firebase-admin-key.json
+*-firebase-adminsdk-*.json
+
 # Husky
 .husky/_
 
