--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
