--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,12 @@
     "migration:run": "typeorm migration:run",
     "migration:revert": "typeorm migration:revert",
     "seed": "node --loader ts-node/esm src/scripts/seed.ts",
-    "db:reset": "npm run migration:revert && npm run migration:run && npm run seed"
+    "db:reset": "npm run migration:revert && npm run migration:run && npm run seed",
+    "security:generate-jwt": "node scripts/generate-jwt-secret.js",
+    "security:verify": "node scripts/verify-security.js",
+    "security:guide": "node scripts/integration-guide.js",
+    "firebase:verify": "node scripts/verify-firebase.js",
+    "firebase:setup": "node scripts/firebase-setup.js"
   },
   "dependencies": {
     "@types/nodemailer": "^7.0.3",
@@ -27,6 +32,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.0",
+    "firebase-admin": "^13.6.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
@@ -45,6 +53,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.20",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.0",
