--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,9 @@
     "express-validator": "^7.3.0",
     "firebase-admin": "^13.6.0",
     "helmet": "^7.1.0",
+    "ical.js": "^2.2.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.10",
     "pg": "^8.10.0",
     "pino": "^8.16.1",
@@ -46,8 +48,9 @@
     "stripe": "^19.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "tsdav": "^2.1.6",
     "typeorm": "^0.3.16",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -57,6 +60,7 @@
     "@types/jest": "^29.5.5",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.0",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
