--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
     "firebase": "^12.0.0",
-    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -65,6 +64,8 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "supercluster": "^8.0.1",
+    "tsdav": "^2.1.6",
+    "uuid": "^13.0.0",
     "web-vitals": "^5.1.0",
     "workbox-background-sync": "^7.3.0",
     "workbox-expiration": "^7.3.0",
@@ -98,6 +99,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
+    "@vercel/node": "^5.3.22",
     "@vitejs/plugin-react": "^5.0.2",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
@@ -112,6 +114,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^10.0.6",
+    "firebase-admin": "^13.6.0",
     "husky": "^9.1.7",
     "jsdom": "^27.0.0",
     "lint-staged": "^16.2.3",
