fix: exclude /api/ from SPA rewrites in vercel.json
- API routes were being redirected to index.html
- Added api/ to exclusion pattern in rewrites
- Now /api/* routes will properly reach serverless functions

--- a/vercel.json
+++ b/vercel.json
@@ -120,7 +120,7 @@
   ],
   "rewrites": [
     {
-      "source": "/((?!assets/).*)",
+      "source": "/((?!api/|assets/).*)",
       "destination": "/index.html"
     }
   ]
