--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "dompurify": "^3.2.7",
     "exceljs": "^4.4.0",
     "firebase": "^12.0.0",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "10.18.0",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.545.0",
