fix: downgrade recharts v3→v2 to fix TDZ error
CRITICAL: Testing recharts as TDZ source
- Downgraded from v3.2.1 to v2.12.7
- recharts v3 might have circular dependencies in ESM build
- Error persists across all build config changes

Error in production:
vendor-Dv2gVONH.js:1 Cannot access 's' before initialization

If this fixes it, we confirm recharts v3 was the culprit

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "react-i18next": "^16.2.4",
     "react-is": "^19.2.0",
     "react-router-dom": "^7.9.1",
-    "recharts": "^3.2.1",
+    "recharts": "2.12.7",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "supercluster": "^8.0.1",
