--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "workbox-webpack-plugin": "^7.3.0",
     "workbox-window": "^7.3.0",
     "xlsx": "^0.18.5",
-    "zod": "^4.1.12"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
