--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tanstack/react-virtual": "^3.13.12",
     "@types/crypto-js": "^4.2.2",
     "@types/dompurify": "^3.0.5",
+    "@types/leaflet": "^1.9.20",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
@@ -52,6 +53,7 @@
     "framer-motion": "11.11.17",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "maplibre-gl": "^5.7.1",
     "papaparse": "^5.5.3",
