--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "framer-motion": "11.11.17",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "idb": "^8.0.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "maplibre-gl": "^5.7.1",
