feat: add Firestore migration script for sub-collections
- Created migrateToSubCollections.ts script
- Migrates flat transactions to finance_snapshots sub-collections
- Features:
  - Dry-run mode for safe testing
  - Creates default YTD snapshot
  - Preserves all original data (non-destructive)
  - Comprehensive logging and error handling
  - Idempotent (safe to re-run)
- Added npm script: npm run migrate:subcollections
- Installed tsx for TypeScript execution
- Comprehensive migration documentation

Usage:
  npm run migrate:subcollections -- --userId=<uid> --orgId=<orgId> --dryRun
  npm run migrate:subcollections -- --userId=<uid> --orgId=<orgId>

Migration path:
  users/{uid}/organizations/{orgId}/transactions/{id}
  → users/{uid}/organizations/{orgId}/finance_snapshots/{snapshotId}/transactions/{id}

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,js,json,css,md}\"",
     "type-check": "tsc --noEmit",
     "validate": "npm run type-check && npm run lint && npm run test:run",
+    "migrate:subcollections": "tsx scripts/migrateToSubCollections.ts",
     "clean": "rm -rf dist node_modules/.vite",
     "optimize": "npm run clean && npm run build",
     "storybook": "storybook dev -p 6006",
@@ -129,6 +130,7 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "storybook": "^10.0.6",
     "tailwindcss": "^3.4.13",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.4",
     "vite": "^7.1.7",
     "vite-plugin-pwa": "^1.0.3",
