--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "workbox-webpack-plugin": "^7.3.0",
     "workbox-window": "^7.3.0",
     "xlsx": "^0.18.5",
-    "zod": "4.1.12"
+    "zod": "4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.2",
