--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "idb": "^8.0.3",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "maplibre-gl": "^5.7.1",
