--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.2.0",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "@tanstack/react-query": "^5.89.0",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/crypto-js": "^4.2.2",
