🚀 v2.2.2: Fix Vercel WASM build + cleanup v2.2.1 files
- Skip WASM build in Vercel using SKIP_WASM env var
- Add JavaScript fallback detection for production builds
- Update version to 2.2.2 in package.json and vercel.json
- Rename docs/2.2.1 to docs/2.2.2
- Clean up v2.2.1 specific files and scripts
- Add robust build:wasm:safe script

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "on-tour-app",
   "private": true,
-  "version": "0.0.3",
+  "version": "2.2.2",
   "type": "module",
   "engines": {
     "node": "22.x",
@@ -9,9 +9,10 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:wasm && vite build",
-    "build:production": "NODE_ENV=production npm run build:wasm && vite build --mode production",
+    "build": "npm run build:wasm:safe && vite build",
+    "build:production": "NODE_ENV=production npm run build:wasm:safe && vite build --mode production",
     "build:wasm": "cd wasm-financial-engine && wasm-pack build --target web --out-dir pkg --release",
+    "build:wasm:safe": "npm run build:wasm || echo 'WASM build skipped - using JavaScript fallback'",
     "build:check": "tsc --noEmit || true && npm run build",
     "build:strict": "tsc && npm run build",
     "build:analyze": "npm run build && node scripts/analyze-bundle.js",
