--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
   "version": 2,
   "name": "on-tour-app-production", 
   "framework": "vite",
-  "buildCommand": "npm run build",
+  "buildCommand": "SKIP_WASM=true vite build",
   "outputDirectory": "dist",
   "installCommand": "npm ci",
   "env": {
     "NODE_ENV": "production",
-    "VITE_APP_VERSION": "2.2.1-production",
+    "VITE_APP_VERSION": "2.2.2-production",
     "VITE_BUILD_TIME": "2025-11-16",
     "VITE_ENVIRONMENT": "production"
   },
