--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,16 @@
   "version": 2,
   "name": "on-tour-app-production", 
   "framework": "vite",
-  "buildCommand": "SKIP_WASM=true vite build",
+  "buildCommand": "SKIP_WASM=true VITE_SKIP_WASM=true vite build",
   "outputDirectory": "dist",
   "installCommand": "npm ci",
   "env": {
     "NODE_ENV": "production",
     "VITE_APP_VERSION": "2.2.2-production",
     "VITE_BUILD_TIME": "2025-11-16",
-    "VITE_ENVIRONMENT": "production"
+    "VITE_ENVIRONMENT": "production",
+    "SKIP_WASM": "true",
+    "VITE_SKIP_WASM": "true"
   },
   "headers": [
     {
