fix: Vercel deployment WASM compatibility
🔧 Vercel Build Fixes:
- Conditional WASM plugin loading (skip in Vercel environment)
- JavaScript fallback simulator for WASM-less environments
- Updated .vercelignore to properly exclude backend while keeping WASM pkg
- Modified build scripts to handle WASM compilation conditionally
- Created /api/timeline endpoint for Timeline Maestro v3.0

🦀 WASM Strategy:
- Skip WASM compilation during Vercel build (no Rust toolchain)
- Graceful fallback to JavaScript simulation engine
- Maintain Timeline Maestro functionality in all environments
- Performance optimization with conditional plugin loading

📡 Timeline API:
- Created Vercel serverless function for timeline data
- Demo data with proper response format for frontend
- CORS headers and error handling
- Supports filtering and pagination

Ready for production deployment on Vercel 🚀

--- a/.vercelignore
+++ b/.vercelignore
@@ -37,7 +37,19 @@ SECURITY.md
 .prettierrc
 .eslintrc.json
 .lintstagedrc.json
-backend/
+backend/src/
+backend/config/
+backend/scripts/
+backend/tests/
+backend/tsconfig.json
+backend/package.json
+backend/README.md
+backend/AUDIT_RESPONSE.md
+backend/FIREBASE_INTEGRATION.md
+backend/SECURITY_IMPROVEMENTS.md
+
+# Keep WASM engine for client-side use
+!wasm-financial-engine/pkg/
 
 # Netlify (no longer used)
 
