--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/cors": "^2.8.19",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.0",
     "@types/papaparse": "^5.5.0",
