feat(roadmap): V11 Ultra Precision Edition - Drag & Drop perfecto
✨ Características V11:
- Drag ultra preciso pixel a pixel sin bugs visuales
- CERO magnetismo al soltar (dragElastic=0, sin constraints)
- Feedback visual mejorado (badge ARRASTRANDO, sombra 2xl)
- Conexiones fluidas en tiempo real durante drag
- GPU acceleration con willChange transform
- Sin auto-centrado en zoom (solo botón Hoy)
- Zoom continuo 5-50px funcional
- Mini-mapa navegación mensual
- Auto-layout inteligente + posiciones custom persistentes

🐛 Bugs arreglados:
- Eliminado efecto magnético 100%
- Eliminados bugs visuales durante drag
- Precisión mejorada - posición exacta donde sueltas
- Transiciones optimizadas (tween linear)
- Sin throttle artificial para máxima responsividad

🎨 Mejoras UI:
- Badge animado durante drag
- Glow accent durante movimiento
- Grab hint al hover
- Sombra 2xl al arrastrar
- Tooltips ricos con info completa

⚡ Performance:
- willChange transform para GPU
- Actualización inmediata sin RAF throttle
- Conexiones optimizadas con deps correctos
- 0 errores TypeScript
- Build exitoso

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express-rate-limit": "^8.2.1",
     "firebase": "^12.0.0",
     "framer-motion": "11.11.17",
+    "gantt-for-react": "^0.2.0",
     "glob": "^11.0.3",
     "helmet": "^8.1.0",
     "i18next": "^25.6.1",
@@ -77,6 +78,7 @@
     "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-gantt-timeline": "^0.4.3",
     "react-i18next": "^16.2.4",
     "react-is": "^18.3.1",
     "react-router-dom": "^7.9.1",
