--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "vite",
   "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "installCommand": "npm ci --legacy-peer-deps --omit=dev --prefer-offline",
+  "installCommand": "npm ci --legacy-peer-deps --prefer-offline",
   "env": {
     "NODE_ENV": "production",
     "VITE_APP_VERSION": "2.2.2-production",
