--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,12 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
 VITE_FIREBASE_APP_ID=1:123456789:web:abc123def456
 VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# ============================================================================
+
+# Financial Engine Configuration (OPTIONAL)
+# Set to 'true' to force Rust/WASM engine in development mode
+# Default is 'false' (uses JavaScript engine for faster dev experience)
+VITE_ENABLE_WASM=false
+
+# ============================================================================
